// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/BulkSelector should render BulkSelector 1`] = `
<Fragment>
  <span
    className="checkbox"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <Triple Checkbox
      onChange={[Function]}
      value="unset"
    />
    <SimpleComposeWrapper [view:default]
      anchor={
        Object {
          "current": null,
        }
      }
      className="container"
      direction="right"
      hasTail={true}
      size="s"
      view="default"
      visible={false}
    >
      <Memo()
        onClick={[Function]}
      />
    </SimpleComposeWrapper [view:default]>
  </span>
</Fragment>
`;

exports[`UI/BulkSelector should render BulkSelector without counter 1`] = `
<Fragment>
  <span
    className="checkbox"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <Triple Checkbox
      onChange={[Function]}
      value="unset"
    />
    <SimpleComposeWrapper [view:default]
      anchor={
        Object {
          "current": null,
        }
      }
      className="container fromTable"
      direction="right"
      hasTail={true}
      size="s"
      view="default"
      visible={false}
    >
      <Memo()
        onClick={[Function]}
      />
    </SimpleComposeWrapper [view:default]>
  </span>
</Fragment>
`;
